--- a/style.css
+++ b/style.css
@@ -1,3 +1,40 @@
 body {
 	background-color: #3D47CB;
 }
+
+.container{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.container div{
+
+}
+
+.box-flag{
+	width: 70vh; 
+	height: 50vh; 
+	background-color: #000; 
+	position: absolute;
+	margin: auto;
+	top: 0; 
+	bottom: 0;
+	left: 0; 
+	right: 0;
+
+	z-index: 2;
+}
+
+.box-info{
+	width: 100%; 
+	height: 5vh; 
+	background-color: #fff;
+	position: absolute;
+	margin: auto;
+	bottom: 0;
+	left: 0; 
+	right: 0;
+
+	z-index: 1;
+}
