--- a/style.css
+++ b/style.css
@@ -7,9 +7,13 @@ body {
 }
 
 .container{
-	/*display: flex;
-	flex-direction: column;
-	align-items: center;*/
+	display: absolute;
+	position: fixed;
+	margin: auto;
+	left: 0;
+	top: 0;
+	right: 0;
+	bottom: 0;
 }
 
 .box-flag{
@@ -22,16 +26,16 @@ body {
 	bottom: 0;
 	left: 0; 
 	right: 0;
-
 	z-index: 2;
-
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 }
 
 .box-info{
-	width: 70vh; 
+	display: none;
+	
+	width: 70vw; 
 	height: 5vh; 
 	background-color: #3D47CB;
 	position: fixed;
@@ -39,12 +43,9 @@ body {
 	bottom: 0;
 	left: 0; 
 	right: 0;
-
 	z-index: 1;
-	
 	padding-top: 4vh;
 	padding-bottom: 5vh;
-	
 }
 
 .line {
@@ -90,12 +91,9 @@ body {
 	height: 7vh;
 	margin-left: auto;
 	margin-right: auto;
-
 	border: 0.5vh solid #fff;
 	border-radius: 25%;
-
 	justify-content: center;
-
 }
 
 .circle {
