--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 
 .box-info{
 	display: none;
-	
+
 	width: 70vw; 
 	height: 5vh; 
 	background-color: #3D47CB;
@@ -53,6 +53,12 @@ body {
 	width: 100%; 
 	height: 12.5%;
 }
+
+.line:hover {
+	/*border: 0.1vh solid #fff;*/
+	box-shadow: 0px 0px 5px 3px #fff;
+}
+
 .line1 {
 	background-color: #414FCC;
 }
