--- a/style.css
+++ b/style.css
@@ -52,11 +52,14 @@ body {
 	z-index: 3;
 	width: 100%; 
 	height: 12.5%;
+	transition: .2s linear
 }
 
 .line:hover {
-	/*border: 0.1vh solid #fff;*/
-	box-shadow: 0px 0px 5px 3px #fff;
+	box-shadow: 0px 0px 1vh 0.5vh #fff;
+	z-index: 5;
+	width: 110%;
+	border-radius: 1vh;
 }
 
 .line1 {
