--- a/style.css
+++ b/style.css
@@ -44,12 +44,12 @@ audio {
 	transition: .2s linear
 }
 
-.line:hover {
+/*.line:hover {
 	box-shadow: 0px 0px 1vh 0.5vh #fff;
 	z-index: 5;
 	width: 110%;
 	border-radius: 1vh;
-}
+}*/
 
 .line1 {
 	background-color: #414FCC;
