--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ audio {
 	text-decoration: none;
 	color: #FFF; 
 	cursor: default;
-	animation: toplinknone 0.1s linear 0.1s 1;
+	animation: toplinknone 0.1ms linear 0.1ms 1;
 	animation-fill-mode: forwards;
 	animation-play-state: paused;
 	text-shadow: 1px 1px 2px black;
